--- a/index.html
+++ b/index.html
@@ -154,8 +154,7 @@
 										<h3>FAMÍLIAS CARENTES</h3>
 									</a>
 									<div class="caption">
-										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, aut, esse,
-											laborum placeat id illo a expedita aperiam...</p>
+										<p>{Inserir texto sobre Familias.}.</p>
 										<p>
 											<a href="cadastro_familia.html" class="btn btn-default btn-transparent"
 												role="button">
